--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   line-height: 1.5;
   color: var(--clr-fg);
   background-color: var(--clr-bg);
@@ -56,7 +56,7 @@ main {
 }
 
 .link::before {
-  content: '';
+  content: "";
   display: inline;
   width: 0%;
   height: 0.2em;
@@ -73,7 +73,7 @@ main {
 
 .link--nav {
   color: var(--clr-fg);
-  text-transform: lowercase;
+  text-transform: capitalize;
   font-weight: 500;
 }
 
@@ -95,6 +95,7 @@ main {
   color: var(--clr-primary);
   border: 2px solid var(--clr-primary);
   position: relative;
+  text-transform: capitalize;
   overflow: hidden;
   z-index: 1;
 }
@@ -105,7 +106,7 @@ main {
 }
 
 .btn--outline:before {
-  content: '';
+  content: "";
   position: absolute;
   background-color: var(--clr-primary);
   right: 100%;
